--- a/style.css
+++ b/style.css
@@ -5,3 +5,20 @@ body {
 .one {
     font-family: 'Courier New', Courier, monospace;
 }
+
+.two {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.three,
+.four {
+    text-align: center;
+}
+
+.four {
+    list-style: inside;
+    font-size: 20px;
+}
